[package]
name = "adventures-of-captain-overclock"
version = "0.1.0"
authors = ["Captain Overclock <ajmed13@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib" }
specs = "0.20.0"
specs-derive = "0.4.1"
wasm-bindgen = "0.2.88"
wasm-server-runner = "0.4.0"
